--- a/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
+++ b/src/app/pages/solicitudes-facturas/solicitudes-facturas.component.html
@@ -2,10 +2,7 @@
   <div class="col-sm-12">
     <div class="card shadow-sm border-0">
       <div class="card-header pb-2 d-flex justify-content-between align-items-center">
-        <h5 class="mb-0">Solicitudes facturas</h5>
-        <!-- <a routerLink="/solicitudes-facturas/nuevo" class="btn btn-sm btn-primary">
-          <i class="ti ti-plus me-1"></i> Agregar usuario
-        </a> -->
+        <h5 class="mb-0">Solicitudes Facturas</h5>
       </div>
 
       <div class="card-body pt-2">
@@ -20,11 +17,7 @@
           <!-- Buscador -->
           <div class="col-md-4">
             <div class="input-group">
-              <input
-                type="text"
-                class="form-control"
-                placeholder="Buscar por nombre..."
-                [(ngModel)]="busqueda"
+              <input type="text" class="form-control" placeholder="Buscar por nombre..." [(ngModel)]="busqueda"
                 (keyup.enter)="onBuscar()" />
               <button class="btn btn-outline-secondary" type="button" (click)="onBuscar()">
                 <i class="ti ti-search"></i>
@@ -52,7 +45,7 @@
                 <th>Comentarios</th>
                 <th>Total</th>
                 <th>Fecha</th>
-                <th>Estado</th>
+                <th>Facturada</th>
                 <th class="text-center">Acciones</th>
               </tr>
             </thead>
@@ -63,18 +56,16 @@
                 <td>{{ u.venta }}</td>
                 <td>{{ u.nombre_cliente }}</td>
                 <td>{{ u.comentarios }}</td>
-                <td>{{ u.total ? (u.total | currency:'USD':'symbol':'1.2-2') : '-' }}</td>
+                <td>{{ u.total ? (u.total | currency:'MXN':'symbol':'1.2-2') : '-' }}</td>
                 <td>{{ u.fecha_facturada }}</td>
                 <td>{{ u.facturada ? 'Sí' : 'No' }}</td>
                 <td class="text-center">
-                  <a class="btn btn-link-primary"
-                     title="Editar"
-                     [routerLink]="['/solicitudes-facturas/editar/', u.id_solicitud]">
+                  <a class="btn btn-link-primary" title="Editar"
+                    [routerLink]="['/solicitudes-facturas/editar/', u.id_solicitud]">
                     <i class="ti ti-pencil"></i>
                   </a>
-                  <button class="btn btn-link-danger"
-                          (click)="cambiarEstado(u)"
-                          [title]="u.activa === 2 ? 'Archivar' : 'Activar'">
+                  <button class="btn btn-link-danger" (click)="cambiarEstado(u)"
+                    [title]="u.activa === 2 ? 'Archivar' : 'Activar'">
                     <i [class]="u.activa === 2 ? 'ti ti-archive' : 'ti ti-power'"></i>
                   </button>
                 </td>
