--- a/src/app/pages/ventas-problemas/ventas-problemas.component.html
+++ b/src/app/pages/ventas-problemas/ventas-problemas.component.html
@@ -2,7 +2,7 @@
   <div class="col-sm-12">
     <div class="card shadow-sm border-0">
       <div class="card-header pb-2 d-flex justify-content-between align-items-center">
-        <h5 class="mb-0">Ventas con Problemas</h5>
+        <h5 class="mb-0">Ventas sin Subir</h5>
 
         <!-- Buscador -->
         <div class="input-group w-50">
